--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1885,6 +1885,7 @@ body.modal-open {
     width: 100%;
     height: 100%;
     z-index: 10;
+    display: none;
 }
 
 .modal_container {
@@ -1895,6 +1896,7 @@ body.modal-open {
     top: 0;
     left: 0;
     z-index: 11;
+    display: none;
 }
 
 .modal_container .modal_window {
